--- a/Voice Assistant ni Romeo.ipynb
+++ b/Voice Assistant ni Romeo.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "7b5198b0",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9e4b7666",
    "metadata": {},
    "outputs": [],
@@ -151,7 +151,6 @@
     "#replace voice assistant tone\n",
     "id = 'HKEY_LOCAL_MACHINE\\SOFTWARE\\Microsoft\\Speech\\Voices\\Tokens\\TTS_MS_EN-GB_HAZEL_11.0'\n",
     "engine.setProperty('voice',id)\n",
-    "engine.say('Hello, its, me, yo, boy, romeo, the, pornhub')\n",
     "engine.runAndWait()"
    ]
   },
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "12339ed7",
    "metadata": {},
    "outputs": [],
@@ -215,21 +214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "324813f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#intro greeting of my voice assistant\n",
     "def greetings():\n",
-    "    speaking('''Hi, my name is Fucking Cortana. I am your personal fucking voice assistant.\n",
+    "    speaking('''Hi, my name is Justin and I am your personal voice assistant.\n",
     "    How may I help you, My liege.\n",
     "    ''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "d964491b",
    "metadata": {},
    "outputs": [],
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "e89346f9",
    "metadata": {},
    "outputs": [],
@@ -283,7 +282,8 @@
     "            continue\n",
     "            \n",
     "        elif 'execute order 66' in q:\n",
-    "            speaking('executing order 66, please standby')\n",
+    "            speaking('warning! executing order 66, please standby')\n",
+    "            webbrowser.open('https://www.youtube.com/watch?v=dQw4w9WgXcQ')\n",
     "            continue\n",
     "        \n",
     "        elif 'start google' in q:\n",
@@ -311,9 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "a4204d4f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
